[project]
python = "^3.14"
name = "eps-load-test"

[tool.poetry]
name = "eps-load-test"
description = "EPS AWS account level resource definitions"
version = "0.0.1-alpha"
authors = [
  "EPS Team"
]
readme = "README.md"
license = "MIT"
repository = "https://github.com/NHSDigital/eps-load-test"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
pre-commit = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pip-licenses = "^5.5.1"

[tool.poetry.scripts]
